--- a/dest/styles/app.css
+++ b/dest/styles/app.css
@@ -360,6 +360,7 @@ b,strong {
   outline: 0;
   border: 0;
   border-radius: 0;
+  min-height: 1px;
   background-color: transparent;
   cursor: pointer;
 }
