--- a/app/assets/views/blocks/home-catalog.pug
+++ b/app/assets/views/blocks/home-catalog.pug
@@ -1,8 +1,10 @@
 .home-catalog
     .home-catalog__row
         .category
-            a.category__body(href="#category")
-                .category__img--wrap
+            .category__body 
+                a.category__link(href="#category" title="Go to category")
+
+                .category__img--wrap(style="background: #F0EEF7")
                     img.category__img(src="img/content/home-catalog/category_0.png" width="640" height="444" alt="Name category")
 
                 .category__content
@@ -15,7 +17,7 @@
             .product__body
                 a.product__link(href="#product" title="Go to product")
 
-                .product__img--wrap
+                .product__img--wrap(style="background: #F0EEF7")
                     img.product__img(src="img/content/home-catalog/product_0.png" width="213" height="213" alt="Name product")
 
                 .product__info
@@ -27,7 +29,7 @@
             .product__body
                 a.product__link(href="#product" title="Go to product")
 
-                .product__img--wrap
+                .product__img--wrap(style="background: #F8F5F8")
                     img.product__img(src="img/content/home-catalog/product_1.png" width="213" height="213" alt="Name product")
 
                 .product__info
@@ -39,7 +41,7 @@
             .product__body
                 a.product__link(href="#product" title="Go to product")
 
-                .product__img--wrap
+                .product__img--wrap(style="background: #F8F5F8")
                     img.product__img(src="img/content/home-catalog/product_2.png" width="213" height="213" alt="Name product")
 
                     ul.product__colors-list
@@ -56,7 +58,7 @@
             .product__body
                 a.product__link(href="#product" title="Go to product")
 
-                .product__img--wrap
+                .product__img--wrap(style="background: #F8F5F8")
                     img.product__img(src="img/content/home-catalog/product_3.png" width="213" height="213" alt="Name product")
 
                     ul.product__colors-list
@@ -69,7 +71,9 @@
                         .price__current 5000 р
 
         .category
-            a.category__body(href="#category")
+            .category__body
+                a.category__link(href="#category" title="Go to category")
+
                 .category__img--wrap
                     img.category__img(src="img/content/home-catalog/category_1.png" width="640" height="444" alt="Name category")
 
@@ -83,7 +87,7 @@
             .product__body
                 a.product__link(href="#product" title="Go to product")
 
-                .product__img--wrap
+                .product__img--wrap(style="background: #F8F5F8")
                     img.product__img(src="img/content/home-catalog/product_4.png" width="213" height="213" alt="Name product")
 
                 .product__info
@@ -95,7 +99,7 @@
             .product__body
                 a.product__link(href="#product" title="Go to product")
 
-                .product__img--wrap
+                .product__img--wrap(style="background: #F8F5F8")
                     img.product__img(src="img/content/home-catalog/product_5.png" width="213" height="213" alt="Name product")
 
                 .product__info
@@ -107,7 +111,7 @@
             .product__body
                 a.product__link(href="#product" title="Go to product")
 
-                .product__img--wrap
+                .product__img--wrap(style="background: #F8F5F8")
                     img.product__img(src="img/content/home-catalog/product_6.png" width="213" height="213" alt="Name product")
 
                 .product__info
@@ -119,7 +123,7 @@
             .product__body
                 a.product__link(href="#product" title="Go to product")
 
-                .product__img--wrap
+                .product__img--wrap(style="background: #F8F5F8")
                     img.product__img(src="img/content/home-catalog/product_7.png" width="213" height="213" alt="Name product")
 
                 .product__info
@@ -128,7 +132,9 @@
                         .price__current 5000 р
 
         .category
-            a.category__body(href="#category")
+            .category__body
+                a.category__link(href="#category" title="Go to category")
+                
                 .category__img--wrap
                     img.category__img(src="img/content/home-catalog/category_2.png" width="640" height="444" alt="Name category")
 
@@ -142,7 +148,7 @@
             .product__body
                 a.product__link(href="#product" title="Go to product")
 
-                .product__img--wrap
+                .product__img--wrap(style="background: #F3F1F0")
                     img.product__img(src="img/content/home-catalog/product_8.png" width="213" height="213" alt="Name product")
 
                 .product__info
@@ -154,7 +160,7 @@
             .product__body
                 a.product__link(href="#product" title="Go to product")
 
-                .product__img--wrap
+                .product__img--wrap(style="background: #F3F1F0")
                     img.product__img(src="img/content/home-catalog/product_9.png" width="213" height="213" alt="Name product")
 
                 .product__info
