--- a/app/assets/views/blocks/home-watch.pug
+++ b/app/assets/views/blocks/home-watch.pug
@@ -2,42 +2,12 @@
     .home-watch__caption Смарт-часы для
     .home-watch__title Жизни <span>и спорта.</span>
 
-    .home-watch__slider
-        .swiper-wrapper
-            .home-watch__card.swiper-slide
-                .home-watch__img--wrap
-                    img.home-watch__img(src="img/content/home-watch/item_0.png" width="310" height="310" alt="Name watch")
+    .home-watch__img--wrap
+        picture
+            source(srcset="img/content/home-watch/desktop.png" media="(min-width: 580px)")
+            img(src="img/content/home-watch/mobile.png" width="343" height="748" alt="Watch image")
 
-            .home-watch__card.swiper-slide
-                .home-watch__img--wrap
-                    img.home-watch__img(src="img/content/home-watch/item_1.png" width="310" height="310" alt="Name watch")
-
-            .home-watch__card.swiper-slide
-                .home-watch__img--wrap
-                    img.home-watch__img(src="img/content/home-watch/item_2.png" width="310" height="310" alt="Name watch")
-
-            .home-watch__card.swiper-slide
-                .home-watch__img--wrap
-                    img.home-watch__img(src="img/content/home-watch/item_3.png" width="310" height="310" alt="Name watch")
-
-            .home-watch__card.swiper-slide
-                .home-watch__img--wrap
-                    img.home-watch__img(src="img/content/home-watch/item_4.png" width="310" height="310" alt="Name watch")
-
-            .home-watch__card.swiper-slide
-                .home-watch__img--wrap
-                    img.home-watch__img(src="img/content/home-watch/item_5.png" width="310" height="310" alt="Name watch")
-
-            .home-watch__card.swiper-slide
-                .home-watch__img--wrap
-                    img.home-watch__img(src="img/content/home-watch/item_3.png" width="310" height="310" alt="Name watch")
-
-            .home-watch__card.swiper-slide
-                .home-watch__img--wrap
-                    img.home-watch__img(src="img/content/home-watch/item_1.png" width="310" height="310" alt="Name watch")
-
-    .slider-nav.home-watch__slider-nav
-        button.btn.btn--reset.slider-arrow.slider-arrow-prev(aria-label="Prev slide")
-        button.btn.btn--reset.slider-arrow.slider-arrow-next(aria-label="Next slide")
+    .home-watch__nav
+        a.btn.btn--reset.home-watch__btn(href="#" title="Go to Watch page")
 
             
