--- a/app/styles/blocks/home-benefits.sass
+++ b/app/styles/blocks/home-benefits.sass
@@ -20,7 +20,7 @@
         position: relative
         z-index: 1
         min-height: 400px @xl 560px
-        border-radius: 34px
+        border-radius: 20px @sm 24px @xl 34px
         overflow: hidden
         padding: 32px 24px 24px @xl 40px 32px 32px
         display: flex
