--- a/app/styles/blocks/home-watch.sass
+++ b/app/styles/blocks/home-watch.sass
@@ -19,14 +19,35 @@
         span
             color: #99b700
 
-    &__slider
-        margin: 32px -92px 0 @xl 48px -136px 0
+    &__img
+        &--wrap
+            position: relative
+            padding-top: 75.5% @sm 24.5%
+            overflow: hidden
+            margin: * -12px * -24px @xl * -16px * -32px
+            margin-top: 48px @xl 32px
 
-    &__card
-        min-width: 220px @xl 310px
-        max-width: 220px @xl 310px
-        margin: 0 -20px @xl 0 -28px
+            img, source
+                position: absolute
+                top: 0
+                left: 0
+                width: 100%
 
-    &__slider-nav
-        margin-top: 32px @xl 48px
+    &__nav
+        display: flex
         justify-content: flex-end
+        margin-top: 24px @xl 32px
+
+    &__btn
+        size: 32px @xl 44px
+        background: rgba(0, 0, 0, .25)
+        border-radius: 50%
+
+        &:before
+            content: ''
+            size: 18px @xl 24px
+            min-width: 18px @xl 24px
+            background: resolve("icons/arrow-right-light.svg") no-repeat center / contain
+
+        &:hover
+            background: @lg #7373f5
