--- a/app/styles/inc/typo.sass
+++ b/app/styles/inc/typo.sass
@@ -6,6 +6,7 @@ body
 	display: flex
 	flex-direction: column
 	min-height: 100vh
+	overflow-x: hidden
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5
 	color: #1d1d1f
