--- a/dest/styles/app.css
+++ b/dest/styles/app.css
@@ -254,6 +254,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .h1,.h2,.h3,.h4,.h5,h1,h2,h3,h4,h5 {
@@ -1297,19 +1298,44 @@ a.tag:active {
   color: #99b700;
 }
 
-.home-watch__slider {
-  margin: 32px -92px 0;
+.home-watch__img--wrap {
+  position: relative;
+  padding-top: 75.5%;
+  overflow: hidden;
+  margin-right: -12px;
+  margin-left: -24px;
+  margin-top: 48px;
 }
 
-.home-watch__card {
-  min-width: 220px;
-  max-width: 220px;
-  margin: 0 -20px;
+.home-watch__img--wrap img,.home-watch__img--wrap source {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
-.home-watch__slider-nav {
-  margin-top: 32px;
+.home-watch__nav {
+  display: flex;
   justify-content: flex-end;
+  margin-top: 24px;
+}
+
+.home-watch__btn {
+  width: 32px;
+  height: 32px;
+  background: rgba(0, 0, 0, .25);
+  border-radius: 50%;
+}
+
+.home-watch__btn:before {
+  content: '';
+  width: 18px;
+  height: 18px;
+  min-width: 18px;
+  background: url('../img/icons/arrow-right-light.svg') no-repeat center / contain;
+}
+
+.home-watch__btn:hover {
 }
 
 .home-catalog__row {
@@ -1344,6 +1370,18 @@ a.tag:active {
   min-height: 210px;
 }
 
+.category__link {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.category__link:hover ~ .category__content .category__btn {
+}
+
 .category__body {
   display: flex;
   align-items: flex-end;
@@ -1352,6 +1390,9 @@ a.tag:active {
   border-radius: 12px;
   overflow: hidden;
   padding: 8px 12px;
+  --smooth-corners: 30;
+  mask-image: paint(smooth-corners);
+  -webkit-mask-image: paint(smooth-corners);
 }
 
 .category__body:before {
@@ -1363,9 +1404,6 @@ a.tag:active {
   bottom: 0;
   left: 0;
   z-index: -1;
-}
-
-.category__body:hover .category__btn {
 }
 
 .category__img {
@@ -1442,6 +1480,9 @@ a.tag:active {
   background: #f0eef7;
   border-radius: 12px;
   padding: 12px;
+  --smooth-corners: 15;
+  mask-image: paint(smooth-corners);
+  -webkit-mask-image: paint(smooth-corners);
 }
 
 .product__colors-list {
@@ -1511,7 +1552,7 @@ a.tag:active {
   position: relative;
   z-index: 1;
   min-height: 400px;
-  border-radius: 34px;
+  border-radius: 20px;
   overflow: hidden;
   padding: 32px 24px 24px;
   display: flex;
@@ -1667,6 +1708,9 @@ a.tag:active {
   margin-right: auto;
   margin-left: auto;
   padding: 0 16px;
+  --smooth-corners: 15;
+  mask-image: paint(smooth-corners);
+  -webkit-mask-image: paint(smooth-corners);
 }
 
 .sub-offer__title {
@@ -1937,6 +1981,14 @@ a.tag:active {
     font-size: 18px;
     margin-top: 8px;
     max-width: 340px;
+  }
+
+  .home-watch__img--wrap {
+    padding-top: 24.5%;
+  }
+
+  .home-benefits__body {
+    border-radius: 24px;
   }
 
   .footer {
@@ -2359,7 +2411,7 @@ a.tag:active {
   }
 
   .header {
-    padding: 20px 0;
+    padding: 12px 0;
   }
 
   .header__logo:hover {
@@ -2437,7 +2489,11 @@ a.tag:active {
     background: #7373f5;
   }
 
-  .category__body:hover .category__btn {
+  .home-watch__btn:hover {
+    background: #7373f5;
+  }
+
+  .category__link:hover ~ .category__content .category__btn {
     background: #7373f5;
   }
 
@@ -2613,7 +2669,7 @@ a.tag:active {
   }
 
   .header {
-    padding: 28px 0;
+    padding: 12px 0;
   }
 
   .header__container {
@@ -2784,18 +2840,25 @@ a.tag:active {
     margin-top: 12px;
   }
 
-  .home-watch__slider {
-    margin: 48px -136px 0;
+  .home-watch__img--wrap {
+    margin-right: -16px;
+    margin-left: -32px;
+    margin-top: 32px;
   }
 
-  .home-watch__card {
-    min-width: 310px;
-    max-width: 310px;
-    margin: 0 -28px;
+  .home-watch__nav {
+    margin-top: 32px;
   }
 
-  .home-watch__slider-nav {
-    margin-top: 48px;
+  .home-watch__btn {
+    width: 44px;
+    height: 44px;
+  }
+
+  .home-watch__btn:before {
+    width: 24px;
+    height: 24px;
+    min-width: 24px;
   }
 
   .home-catalog__row {
@@ -2884,6 +2947,7 @@ a.tag:active {
 
   .home-benefits__body {
     min-height: 560px;
+    border-radius: 34px;
     padding: 40px 32px 32px;
   }
 
