--- a/app/styles/blocks/home-categories.sass
+++ b/app/styles/blocks/home-categories.sass
@@ -22,7 +22,7 @@
         align-items: center
         text-align: center
         padding: 32px 16px 24px @sm 48px 20px 28px @xl 64px 32px 40px
-        min-height: 420px @sm 500px @xl 700px
+        min-height: 130vw @sm 110vw @md clamp(420px, 49vw, 940px)
 
     &__name
         text: 600 28px 1 @xl 40px
@@ -63,16 +63,20 @@
 
     &__img
         &--wrap
-            margin-top: 20px @sm 40px
-            flex: 1
-            display: flex
-            align-items: center
-            max-width: 280px @sm 324px @xl 100%
-            max-height: 272px @xl 400px
+            position: absolute
+            top: 0
+            left: 0
+            size: 100%
+
+            img, source
+                size: 100%
+                object-fit: cover
+                object-position: center
 
     &__bg
         size: 100%
         object-fit: cover
+        object-position: center
 
         &--wrap
             position: absolute 0 null null 0
@@ -80,9 +84,10 @@
 
     &__label
         text: 600 16px
-        margin-top: 16px @sm 24px
+        margin-top: auto
         display: inline-flex
         align-items: center
+        z-index: 1
 
         &-sticker
             color: #5d82ea
@@ -112,24 +117,5 @@
             margin-top: 32px
 
     &.-strange-
-        ^&__img
-            filter: drop-shadow(0 0 40px rgba(54, 161, 255, 0.5)) @xl drop-shadow(0 0 124px rgba(54, 161, 255, 0.5))
-
-            &--wrap
-                position: relative
-                transform: translateX(-6vw)
-                max-width: 100%
-                max-height: 100%
-
-                &::before
-                    content: ''
-                    size: 85% 100%
-                    position: absolute
-                    top: 0
-                    left: 15%
-                    background: rgba(54, 161, 255, 0.5)
-                    z-index: -1
-                    display: none
-
         ^&__nav
             margin-top: 40px @xl 56px
