--- a/app/assets/views/inc/header.pug
+++ b/app/assets/views/inc/header.pug
@@ -1,14 +1,14 @@
 header.header
     .container.header__container
         .header__row
-            a.header__logo(href="#")
+            a.header__logo(href="./")
                 img.header__logo-img(src="img/icons/logo.svg" width="83" height="22" alt="Elari")
 
             nav.header__nav
                 ul.header__nav-list
                     each category, i in nav
                         li.header__nav-item
-                            a.header__nav-link(href="#")= category.name
+                            a.header__nav-link(href="" + category.link)= category.name
 
             .header__panel
                 button.btn.btn--reset.btn--search.header__btn-search(aria-label="Toggle search panel")
