--- a/app/assets/views/inc/var.pug
+++ b/app/assets/views/inc/var.pug
@@ -1,28 +1,36 @@
 - 
     nav = [
         {
-            name: 'Детские часы'
+            name: 'Детские часы',
+            link: 'catalog.html'
         },
         {
-            name: 'Детские телефоны'
+            name: 'Детские телефоны',
+            link: 'catalog.html'
         },
         {
-            name: 'Фитнес-часы'
+            name: 'Фитнес-часы',
+            link: 'catalog.html'
         },
         {
-            name: 'Аксессуары'
+            name: 'Аксессуары',
+            link: 'catalog.html'
         },
         {
-            name: 'Акции'
+            name: 'Акции',
+            link: 'catalog.html'
         },
         {
-            name: 'Поддержка'
+            name: 'Поддержка',
+            link: 'support.html'
         },
         {
-            name: 'Доставка'
+            name: 'Доставка',
+            link: 'delivery.html'
         },
         {
-            name: 'Контакты'
+            name: 'Контакты',
+            link: 'contacts.html'
         }
     ]
 
