--- a/app/styles/inc/section.sass
+++ b/app/styles/inc/section.sass
@@ -75,3 +75,6 @@
             transform: translateX(-50%)
             background: #f5f5f7
             z-index: -1
+
+        &:last-child
+            margin-bottom: -24px @md -80px @xl -120px
