--- a/app/styles/inc/typo.sass
+++ b/app/styles/inc/typo.sass
@@ -11,11 +11,11 @@ body
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5
 	color: #1d1d1f
 	font-family: var(--font-family)
-	font-weight: 700
+	font-weight: 600
 	margin-top: 0
 
 h1, .h1
-	text: 28px 1.2 @sm 32px @lg 36px
+	text: 600 28px 1 @md 40px @xl 56px
 	margin: 0 0 24px
 
 h2, .h2
@@ -48,4 +48,5 @@ strong, b
 	text-align: @lg center
 
 .page-title
-	margin-bottom: 16px @sm 20px @lg 24px
+	margin-top: 24px
+	margin-bottom: 24px @md 48px @xl 60px
