--- a/app/styles/blocks/footer.sass
+++ b/app/styles/blocks/footer.sass
@@ -2,6 +2,7 @@
     background: #f5f5f7
     padding: 16px 0 @sm 0
     transition: @lg .4s, opacity .4s, -webkit-transform .4s
+    margin-top: 24px @md 80px @xl 120px
 
     &__main
         display: @sm flex
